# phrm_v1

./: .gitignore  README.md  TASKS.md  main.py  pyproject.toml
backend/: create_db.py  create_migration.py  create_tables.py  models_standalone.py  phrm.db  requirements.txt
backend/alembic/: env.py  env_standalone.py
backend/alembic/versions/: 8d15f0713a70_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  family_members.py  health_records.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py  family_member_service.py  health_record_service.py  user_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/appointments/: AppointmentManagement.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/dashboard/: DashboardCards.tsx  QuickActions.tsx  RecentActivity.tsx
frontend/src/components/debug/: ReduxDebug.tsx
frontend/src/components/family/: FamilyManagement.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/components/medications/: MedicationManagement.tsx
frontend/src/components/profile/: Profile.tsx
frontend/src/store/: index.ts  userSlice.ts
frontend/src/types/: appointments.ts  family.ts  user.ts
