[project]
name = "phrm-v1"
version = "0.1.0"
description = "Personal Health Records Manager with AI-powered insights"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "PHRM Team"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.4.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "alembic>=1.12.1",
    "httpx>=0.25.1",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.1",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.hatch.build.targets.sdist]
include = [
    "backend/",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "EM", "PT", "RET", "SIM", "ARG"]
ignore = ["ANN101", "ANN102"]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
]

[tool.ruff.isort]
known-first-party = ["phrm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
